tests/ui/parser/incompatible-safe-unsafe-keywords-extern-fn.stderr
error: expected one of `extern` or `fn`, found keyword `unsafe`
  --> $DIR/incompatible-safe-unsafe-keywords-extern-fn.rs:5:10
   |
LL | pub safe unsafe extern fn foo() {}
   |          ^^^^^^ expected one of `extern` or `fn`
   |
help: `safe` and `unsafe` are incompatible, use only one of the keywords
  --> $DIR/incompatible-safe-unsafe-keywords-extern-fn.rs:5:5
   |
LL | pub safe unsafe extern fn foo() {}
   |     ^^^^^^^^^^^

error: aborting due to 1 previous error

